fixed name overflow

--- a/smallDMchannelList.css
+++ b/smallDMchannelList.css
@@ -276,7 +276,7 @@
     min-width: 0px;
   }
   .panels-3wFtMD .container-YkUktl {
-    border-top: 1px solid rgb(var(--border-color-1), var(--border-opacity-1))
+    border-top: 1px solid rgb(var(--border-color-1), var(--border-opacity-1));
   }
   .panels-3wFtMD .container-YkUktl:hover {
     border-radius: 0 25px 0 0;
@@ -284,6 +284,16 @@
     border-left: 0;
     border-bottom: 0;
   }
+}
+.panels-3wFtMD .container-YkUktl  {
+  overflow: hidden;
+}
+.panels-3wFtMD .container-YkUktl .nameTag-sc-gpq {
+  margin-left: var(--channel-name-no-hover-margin);
+  transition: margin .5s;
+}
+#app-mount .sidebar-1tnWFu:hover .panels-3wFtMD .container-YkUktl .nameTag-sc-gpq {
+  margin-left: 0;
 }
 .sidebar-1tnWFu:not(:hover) .container-1zzFcN .connection-3k9QeF .flex-2S1XBF {
   margin: 0px;
